--- a/01.全部项目说明.md
+++ b/01.全部项目说明.md
@@ -4,7 +4,7 @@
 
 | 名称 | 说明 |
 |---|---|
-| [App](https://github.com/wang9527s/App)  | 笔记  |
+| [code.study.example](https://github.com/wang9527s/code.study.example)  |   |
 | [note.dir](https://github.com/wang9527s/note.dir)  | 笔记  |
 | [wtools](https://github.com/wang9527s/wtools)|  之前的工具软件，待合入App中|
 |  [wbash](https://github.com/wang9527s/wbash) | 常用linux脚本  |
@@ -13,7 +13,6 @@
 
 | 名称 | 说明 |
 |---|---|
-| [code.study.example](https://github.com/wang9527s/code.study.example)  |   |
 |  [raw-image-viewer](https://github.com/wang9527s/raw-image-viewer) |  raw图片显示器 |
 | [paddle-ocr-study](https://github.com/wang9527s/paddle-ocr-study)  |   paddle ocr 的 demo|
 | [wang9527s](https://github.com/wang9527s/wang9527s) | 主页 |
@@ -34,6 +33,7 @@
 
 | 名称 | 说明 |
 |---|---|
+| [App](https://github.com/wang9527s/App)  | 合并到wtools中了  |
 |[cpp-qt-learning](https://github.com/wang9527s/cpp-qt-learning)| 合并到note.dir中了|
 |[qt.example](https://github.com/wang9527s/qt.example)| 合并到code.study.example中了|
 |[go-study](https://github.com/wang9527s/go-study)| 合并到code.study.example中了|
